# amicompat

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  baseline-audit-report.json  debug-cli-report.json  debug-report.json  eslint.config.js  example-export.py  mcp-final-test.json  mcp.install.json  modern-features-report.json  package-lock.json  package.json  pyproject.toml  report.json  test-detailed-report.json  test-modern.css  test-report.json  test_mcp_server.py  test_server.py  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
cli-test-project/: test.css  test.html  test.js
reports/: audit-summary.json
scripts/: bump-version-on-publish.js  generate-baseline-data.ts  test-version-increment.sh
src/: cli.ts  server.ts
src/amicompat_mcp/: __init__.py  server.py
src/amicompat_mcp/config/: __init__.py  targets.json
src/amicompat_mcp/core/: __init__.py  analyzer.py  baseline_api.py  detector.py  formatter.py  walker.py
src/amicompat_mcp/mcp/: __init__.py  capabilities.py  handlers.py
src/amicompat_mcp/utils/: __init__.py  io.py  validate.py
src/core/: __init__.py
src/lib/: baseline.ts  eslint-wrapper.ts  parsers.ts  walker.ts
src/tools/: index.ts
src/types/: eslint-plugins.d.ts  index.ts
tests/: TESTING.md
tests/fixtures/: test.css  test.html  test.js  test.ts
tests/integration/: cli.test.ts  mcp-tools.test.ts
tests/unit/: baseline.test.ts  eslint-wrapper.test.ts  parsers.test.ts  types.test.ts  walker.test.ts
