[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amicompat-mcp"
version = "1.0.0"
description = "MCP server for auditing web codebase Baseline compatibility"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "AmICompat Team", email = "amicompat@example.com" },
]
maintainers = [
    { name = "AmICompat Team", email = "amicompat@example.com" },
]
keywords = ["mcp", "baseline", "compatibility", "web", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Console",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/amicompat/amicompat-mcp"
Documentation = "https://github.com/amicompat/amicompat-mcp#readme"
Repository = "https://github.com/amicompat/amicompat-mcp"
Issues = "https://github.com/amicompat/amicompat-mcp/issues"
Changelog = "https://github.com/amicompat/amicompat-mcp/blob/main/CHANGELOG.md"

[project.scripts]
amicompat-mcp = "amicompat_mcp.server:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["amicompat_mcp*"]

[tool.setuptools.package-data]
amicompat_mcp = ["config/*.json"]



